--- a/src/components/signup/homeSignup.module.css
+++ b/src/components/signup/homeSignup.module.css
@@ -175,26 +175,6 @@ button {
     transform: translateX(-100%);
 }
 
-button {
-    cursor: pointer;
-}
-
-@media screen and (max-width: 800px) {
-    .homeSignup_inner_container {
-        flex-direction: column;
-        align-items: center;
-        gap: 50px;
-    }
-
-    .homeSignup_inner_container>* {
-        width: 80%;
-    }
-
-    .sign_container {
-        padding-inline: 15px;
-    }
-}
-
 .input_flex input:focus {
     border-color: #FF8500;
     outline: none;
@@ -215,15 +195,35 @@ button {
     top: 25%;
     cursor: pointer;
 }
+button {
+    cursor: pointer;
+}
+
+@media screen and (max-width: 800px) {
+    .homeSignup_inner_container {
+        flex-direction: column;
+        align-items: center;
+        gap: 50px;
+    }
+
+    .homeSignup_inner_container>* {
+        width: 80%;
+    }
+
+    .sign_container {
+        padding-inline: 15px;
+    }
+}
+
 
 @media screen and (max-width: 600px) {
-    .input_flex div {
+    .input_flex .name {
         flex-direction: column;
         justify-content: space-between;
         gap: 8px;
     }
 
-    .input_flex div input {
+    .input_flex .name input {
         width: 90%;
     }
 }
